--- a/reservation.html
+++ b/reservation.html
@@ -21,14 +21,11 @@
         <div class="header-info">
           <!-- Wird durch JavaScript befüllt -->
         </div>
-        <div class="header-menu">
-          <button id="menuBtn" class="menu-btn">⋮</button>
-          <div id="dropdownMenu" class="dropdown-menu hidden">
-            <button id="editBtn" class="dropdown-item">Bearbeiten</button>
-            <button id="emailBtn" class="dropdown-item">📧 E-Mail senden</button>
-            <button id="stornoBtn" class="dropdown-item">Storno</button>
-            <button id="deleteReservationBtn" class="dropdown-item" style="color: #dc3545;">🗑️ Löschen</button>
-          </div>
+        <div class="header-buttons">
+          <button id="editBtn" class="header-btn">Bearbeiten</button>
+          <button id="emailBtn" class="header-btn header-btn-blue">E-Mail</button>
+          <button id="stornoBtn" class="header-btn header-btn-orange">Storno</button>
+          <button id="deleteReservationBtn" class="header-btn header-btn-danger">Löschen</button>
         </div>
       </div>
     </div>
