feat: Implement automatic barcode scanning functionality and remove manual barcode input elements

--- a/reservation.html
+++ b/reservation.html
@@ -162,6 +162,7 @@
   <script src="js/email-utils.js"></script>
   <script src="js/http-utils.js"></script>
   <script src="js/loading-overlay.js"></script>
+  <script src="auto-barcode-scanner.js"></script>
   <script src="reservation.js"></script>
 
   <script>
