--- a/reservierungen.html
+++ b/reservierungen.html
@@ -40,11 +40,6 @@
         <button type="button" id="clearSearchBtn" class="clear-search-btn" title="Suche löschen">×</button>
       </div>
 
-      <!-- Barcode Scanner Button -->
-      <button type="button" id="barcodeBtn" class="toggle-btn barcode-btn" title="Karte scannen">
-        <img src="pic/barcode.svg" alt="Barcode" class="barcode-icon">
-      </button>
-
       <!-- Neue Reservierung Button -->
       <button id="newReservationBtn" class="toggle-btn new-res">+ Neue Reservierung</button>
     </div>
@@ -97,28 +92,7 @@
     <span class="status-text">Verbindung prüfen...</span>
   </div>
 
-  <!-- Barcode Scanner Modal -->
-  <div id="barcodeModal" class="modal" style="display:none;">
-    <div class="modal-content barcode-modal-content">
-      <span id="barcodeModalClose" class="close">&times;</span>
-      <h2>
-        <img src="pic/barcode.svg" alt="Barcode" class="barcode-modal-icon">
-        Karte scannen
-      </h2>
-      <p>Bitte scannen Sie die Karte oder geben Sie den Code manuell ein:</p>
-
-      <div class="barcode-input-container">
-        <input type="text" id="barcodeInput" placeholder="Kartencode hier eingeben oder scannen..." autofocus readonly
-          onfocus="this.removeAttribute('readonly');" inputmode="none" autocomplete="off">
-        <div class="barcode-status" id="barcodeStatus">Bereit zum Scannen...</div>
-      </div>
-
-      <div class="barcode-actions">
-        <button type="button" id="barcodeSearchBtn" class="btn-primary">🔍 Suchen</button>
-        <button type="button" id="barcodeCancelBtn" class="btn-secondary">Abbrechen</button>
-      </div>
-    </div>
-  </div>
+  <!-- Barcode Scanner Modal entfernt - automatische Erkennung mit {..} -->
 
   <!-- QRCode.js (CDN) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
@@ -126,7 +100,7 @@
   <script src="js/http-utils.js"></script>
   <script src="js/loading-overlay.js"></script>
   <script src="js/sync-utils.js"></script>
-  <script src="simple-barcode-scanner.js"></script>
+  <script src="auto-barcode-scanner.js"></script>
   <script src="script.js"></script>
 
   <!-- Modal für neue Reservierung -->
@@ -205,7 +179,7 @@
         }
       }
 
-      // Barcode-Scanner wird automatisch durch barcode-scanner.js geladen
+      // Automatischer Barcode-Scanner läuft im Hintergrund und reagiert auf {..} Pattern
       console.log('✅ Reservierungen-Seite initialisiert');
     });
   </script>
