--- a/reservation.html
+++ b/reservation.html
@@ -179,6 +179,39 @@
         </div>
       </div>
     </div>
+
+    <!-- Number Pad Modal -->
+    <div id="numberPadModal" class="modal hidden">
+      <div class="modal-backdrop"></div>
+      <div class="modal-content number-pad-modal">
+        <span class="modal-close" id="numberPadClose">&times;</span>
+        <h3>Anzahl eingeben</h3>
+
+        <div class="number-display">
+          <input type="text" id="numberDisplay" readonly value="1">
+        </div>
+
+        <div class="number-pad">
+          <button class="num-btn" data-num="1">1</button>
+          <button class="num-btn" data-num="2">2</button>
+          <button class="num-btn" data-num="3">3</button>
+          <button class="num-btn" data-num="4">4</button>
+          <button class="num-btn" data-num="5">5</button>
+          <button class="num-btn" data-num="6">6</button>
+          <button class="num-btn" data-num="7">7</button>
+          <button class="num-btn" data-num="8">8</button>
+          <button class="num-btn" data-num="9">9</button>
+          <button class="num-btn clear-btn" data-action="clear">C</button>
+          <button class="num-btn" data-num="0">0</button>
+          <button class="num-btn backspace-btn" data-action="backspace">⌫</button>
+        </div>
+
+        <div class="number-pad-actions">
+          <button id="numberPadCancel" class="btn-cancel">Abbrechen</button>
+          <button id="numberPadOk" class="btn-confirm">OK</button>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- Connection Status -->
