--- a/reservierungen.html
+++ b/reservierungen.html
@@ -9,16 +9,143 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/navigation.css">
   <link rel="stylesheet" href="css/navigation-integration.css">
+  <style>
+    /* Reservierungen-spezifische Styles */
+    .main-content {
+      display: flex;
+      flex-direction: column;
+      height: calc(100vh - 85px);
+      /* Mehr Platz für Navigation + Margins */
+      min-height: 500px;
+      overflow: hidden;
+      padding: 0 !important;
+      margin: 0 !important;
+      box-sizing: border-box;
+    }
+
+    .controls.legacy-controls {
+      flex-shrink: 0;
+      background: white;
+      z-index: 100;
+      border-bottom: 2px solid #ddd;
+      padding: 8px;
+      /* Weiter reduziert von 10px */
+      position: sticky;
+      top: 0;
+    }
+
+    .table-container {
+      flex: 1;
+      overflow: hidden;
+      position: relative;
+      margin-top: -2px;
+      /* Kompensiert den Border */
+    }
+
+    #resTable {
+      width: 100%;
+      height: 100%;
+      border-collapse: separate;
+      border-spacing: 0;
+    }
+
+    #resTable thead {
+      position: sticky;
+      top: 0;
+      background: #2ecc71;
+      z-index: 50;
+    }
+
+    #resTable thead th {
+      background: #2ecc71;
+      color: white;
+      padding: 8px;
+      border-bottom: 2px solid #27ae60;
+      text-align: center;
+      font-weight: 600;
+    }
+
+    .table-container {
+      overflow-y: auto;
+      max-height: calc(100vh - 150px);
+      /* Weitere Reduzierung um sicherzugehen */
+    }
+
+    #resTable tbody tr {
+      border-bottom: 1px solid #ddd;
+    }
+
+    #resTable tbody tr:hover {
+      background-color: #f8f9fa;
+    }
+
+    #resTable tbody td {
+      padding: 6px 8px;
+      border-right: 1px solid #ddd;
+      vertical-align: middle;
+    }
+
+    /* Spaltenbreiten definieren */
+    #resTable th:nth-child(1),
+    #resTable td:nth-child(1) {
+      width: 60px;
+      min-width: 60px;
+    }
+
+    #resTable th:nth-child(2),
+    #resTable td:nth-child(2) {
+      width: 80px;
+      min-width: 80px;
+    }
+
+    #resTable th:nth-child(3),
+    #resTable td:nth-child(3) {
+      width: 80px;
+      min-width: 80px;
+    }
+
+    #resTable th:nth-child(4),
+    #resTable td:nth-child(4) {
+      width: 60px;
+      min-width: 60px;
+    }
+
+    #resTable th:nth-child(5),
+    #resTable td:nth-child(5) {
+      width: 200px;
+      min-width: 200px;
+    }
+
+    #resTable th:nth-child(6),
+    #resTable td:nth-child(6) {
+      width: 80px;
+      min-width: 80px;
+    }
+
+    #resTable th:nth-child(7),
+    #resTable td:nth-child(7) {
+      width: 60px;
+      min-width: 60px;
+    }
+
+    #resTable th:nth-child(8),
+    #resTable td:nth-child(8) {
+      width: 150px;
+      min-width: 150px;
+    }
+
+    #resTable th:nth-child(9),
+    #resTable td:nth-child(9) {
+      width: 150px;
+      min-width: 150px;
+    }
+  </style>
 </head>
 
 <body>
   <!-- Navigation wird durch JavaScript eingefügt -->
 
   <main class="main-content">
-    <div class="content-header">
-      <h1>Reservierungen</h1>
-    </div>
-
     <div class="controls legacy-controls">
       <!-- Typ-Toggle -->
       <button id="toggleType" class="toggle-btn arrival">Anreise</button>
@@ -44,24 +171,26 @@
       <button id="newReservationBtn" class="toggle-btn new-res">+ Neue Reservierung</button>
     </div>
 
-    <table id="resTable">
-      <thead>
-        <tr>
-          <th>Status</th>
-          <th>Anreise</th>
-          <th>Abreise</th>
-          <th>Anzahl</th>
-          <th>Name</th>
-          <th>arr</th>
-          <th>ANam</th>
-          <th>Bem</th>
-          <th>Orig</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- wird per script.js befüllt -->
-      </tbody>
-    </table>
+    <div class="table-container">
+      <table id="resTable">
+        <thead>
+          <tr>
+            <th>Status</th>
+            <th>Anreise</th>
+            <th>Abreise</th>
+            <th>Anzahl</th>
+            <th>Name</th>
+            <th>arr</th>
+            <th>ANam</th>
+            <th>Bem</th>
+            <th>Orig</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- wird per script.js befüllt -->
+        </tbody>
+      </table>
+    </div>
   </main>
 
   <!-- Info-Modal -->
